@startuml

title __COURSES's Class Diagram__\n

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.ClassOfStudents {
            - name : String
            + Class()
            + getName()
            + getStudentList()
            + getStudentsList()
            + setName()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.ClassList {
            - classList : ArrayList<Class>
            + ClassList()
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.Course {
            - title : String
            + Course()
            + Course()
            + getClassOfStudents()
            + getParticipants()
            + getTeacherList()
            + getTitle()
            + initStudents()
            + setClassOfStudents()
            + setParticipants()
            + setTeacherList()
            + setTitle()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.CourseList {
            - courses : ArrayList<Course>
            + CourseList()
            + addCourse()
            + getCourses()
            + getCoursesByClass()
            + getCoursesByClassName()
            + getCoursesByTeachers()
            + getCoursesByTitle()
            + importCourses()
            + readCourseListFromBinFile()
            + removeCourse()
            + writeCourseListToBinFile()
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.CourseTest {
            {static} + main()
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.Teacher {
        }
      }
    }
  }
  

  namespace  {
    namespace odel {
      namespace courses {
        class model.courses.TeacherList {
            ~ teachers : ArrayList<Teacher>
            + TeacherList()
            + TeacherList()
            + addTeacher()
            + getTeacherByIndex()
            + removeTeacher()
            + size()
        }
      }
    }
  }
  

  model.courses.ClassOfStudents .up.|> java.io.Serializable
  model.courses.ClassOfStudents o-- model.students.StudentList : studentList
  model.courses.Course .up.|> java.io.Serializable
  model.courses.Course o-- model.courses.ClassOfStudents : classOfStudents
  model.courses.Course o-- model.students.StudentList : participants
  model.courses.Course o-- model.courses.TeacherList : teacherList
  model.courses.Teacher .up.|> java.io.Serializable
  model.courses.TeacherList .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
